--- a/src/templates/pp.html
+++ b/src/templates/pp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel ="stylesheet" href="{{url_for('static', filename='estilo.css')}}"> <!--lo del estilo CSS-->
-    <title>Página Web Laboratorio #2</title>
+    <title>Aeropuerto Europeo</title>
     <!--Características del botón que pasa a la siguiente página (es una clase)-->
     <style> 
         .boton{ 
@@ -26,7 +26,7 @@
         <!--Acción para pasar a la siguiente página, se declaró en main.py-->
         <form action="/continuar" method="post">
             <!--Adentro del botón irá una imagen-->
-            <button  onclick="exec('index.html');", class="boton"><img src="static/moño.png" style="width: 150px;" /></button>
+            <button  onclick="exec('index.html');", class="boton"><img src="static/boton.png" style="width: 150px;" /></button>
         </form>
     </div>    
 </body>
