--- a/src/templates/App.html
+++ b/src/templates/App.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel ="stylesheet" href="{{url_for('static', filename='estilo2.css')}}">
-<title>Web Page Lab #2</title>
+<title>Software</title>
 <!--Classes -->
 <style>
     *{
@@ -174,9 +174,3 @@
     </div>
 </body>
 </html>    
-                        
-                        
-                        
-                        
-                        
-                        
