--- a/src/static/css/estilos2.css
+++ b/src/static/css/estilos2.css
@@ -1,61 +1,96 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-dialog {
-    color: green;
-    font-size: 30px;
-    font-weight: bold;
-    font-style: italic;
-}
+
 body {
+    background: url("../images/fondo2.jpg");   
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align: left;
     font-family: 'candara';
-    color: rgb(230, 100, 100);
+    color: rgb(0, 0, 0);
     font-size: 120%;
+    background-color: #f5f5f5;
 }
 
-.main-container{
-    width: 80%;
+.main-container {
+    width: 90%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    padding: 40px 0;
 }
 
-.main-container .titlebar {
+.titlebar {
     width: 100%;
-    
-}
-
-.main-container h1 {
     text-align: center;
-    margin-bottom: 10px;
-    
+    margin-bottom: 20px;
 }
 
-.main-container iframe {
+.titlebar img {
+    max-width: 100%;
+    height: auto;
+}
+
+.map-container {
     width: 70%;
+    padding: 20px;
+    margin-top: 80px;       
+}
+
+.map-container iframe {
+    width: 100%;
+    height: 600px;
     border-radius: 10px;
 }
 
-.main-container .panel {
+.panel {
     padding: 20px;
     width: 30%;
-    left: 40%;
 }
 
-.panel #city-1,
-.panel #city-2 {
+.panel img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+select {
     width: 100%;
     height: 30px;
     line-height: 30px;
     margin-bottom: 10px;
-    left: 40%;
+    padding: 0 5px;
+    font-size: 16px;
 }
+
 .botton {
-    text-align: left;
+    display: inline-block;
+    text-align: center;
     font-family: 'candara';
-    color: rgb(207, 47, 100);
-    font-size: 120%;
+    color: #fff;
+    font-size: 20px;
+    background-color: rgb(34, 147, 204);
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.botton:hover {
+    background-color: rgb(16, 2, 7);
+}
+
+.instructions {
+    font-size: 20px;
+    margin-top: 14px;
+}
+
+.folium-map {
+    width: 800px; /* Ajusta el ancho del mapa */
+    height: 600px; /* Ajusta la altura del mapa */
 }
