--- a/src/static/css/estilos.css
+++ b/src/static/css/estilos.css
@@ -3,17 +3,35 @@ body{
   padding: 0;
   background: url("../images/fondo.jpg");   
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
   font-family: sans-serif;
 }
-
 .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: white;
+  height: 50vh;
+  border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center; /*Centra los elementos horizontalmente*/
   align-items: center; /*Centra los elementos verticalmente*/
-  height: 100vh;
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.2);
+}
+.container h1{
+  text-align: center;
+  padding: 0 0 70px 0;
 }
 
+.logo img{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 70px;
+}
 .boton {
   width: 200px;
   height: 60px;
@@ -30,4 +48,12 @@ body{
 .boton:hover {
   background-color: #0062cc;
   cursor: pointer;
+}
+
+.acreditacion {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: gray;
 }
