--- a/src/templates/App.html
+++ b/src/templates/App.html
@@ -19,7 +19,7 @@
                 <div class="lists">
                     <br> <nr></nr>    
                     <!--Ciudades de partida(lista)-->
-                    <img src="/static/images/llegada.jpg" style= "width: 350px ; height: 200px;" />               
+                    <img src="/static/images/origen.png" style= "width: 350px ; height: 200px;" />               
                     <select name="city-1" id="city-1" required>
                         <option value="">-</option>
                         <option value="LONDON">LONDON</option>
