--- a/src/templates/Inicio.html
+++ b/src/templates/Inicio.html
@@ -10,9 +10,18 @@
 
 <body>
     <div class="container">
+        <h1> EuroRoutes</h1>
         <form action="/continuar" method="post">
             <button class="boton">Continuar</button>
         </form>
+        <p>Para proceder de click en continuar</p>
     </div>
+    <div class="logo">
+        <img src="../static/images/logo.png" alt="uninortelog">
+    </div>
+    <div class="acreditacion">
+        <p>Creditos: Kenny ZY. Juan Aragón A. Tomás Cervera T.</p>
+    </div>
+    
 </body>
 </html>
