--- a/src/templates/App.html
+++ b/src/templates/App.html
@@ -95,8 +95,8 @@
                 <!--Botón para continuar-->
                 <button type="submit" id="script" class="botton" name="scriptbutton" value="Run script" onclick="exec('python Redraw.py');">Continuar</button>
                 <p class="instructions">
-                    <br>- Si quieres ver los nombres de los capitales presiona el marcador<br> 
-                    - Si quieres ver el costo minimo coloca el cursor encima de la linea.
+                    <br>- Si quieres ver los nombres de los capitales europeos presiona el marcador<br> 
+                    - Si quieres ver el costo minimo o la distancia coloca el cursor encima de la linea.
                 </p>
             </form>
         </aside>
