--- a/src/templates/App.html
+++ b/src/templates/App.html
@@ -19,7 +19,7 @@
                 <div class="lists">
                     <br> <nr></nr>    
                     <!--Ciudades de partida(lista)-->
-                    <img src="/static/images/origen.png" style= "width: 350px ; height: 200px;" />               
+                    <img src="/static/images/origen.png" style= "width: 250px ; height: 150px;" />               
                     <select name="city-1" id="city-1" required>
                         <option value="">-</option>
                         <option value="TIRANA">TIRANA</option>
@@ -65,7 +65,7 @@
                         <option value="SAN MARINO">SAN MARINO</option>
                         <option value="KIEV">KIEV</option>
                         </select>
-                        <img src="/static/images/destino.png" style= "width: 350px ; height: 200px;" />
+                        <img src="/static/images/destino.png" style= "width: 250px ; height: 150px;" />
                         <!--Ciudades de llegada-->
                         <select name="city-2" id="city-2" required>
                         <option value="">-</option>
@@ -120,6 +120,60 @@
                     <br>- Si quieres ver los nombres de los capitales europeos presiona el marcador<br> 
                     - Si quieres ver el costo minimo o la distancia coloca el cursor encima de la linea.
                 </p>
+            </form>
+            <form action="/modify_vertex" method="POST">
+                <br><br> 
+                <p id="remove-text" style="color: white;">CAPITAL A MODIFICAR:</p>
+                <select name="city-modify" id="city-modify" required>
+                    <!-- Lista de capitales (opciones) -->
+                    <option value="">-</option>
+                    <option value="TIRANA">TIRANA</option>
+                    <option value="VIENNA">VIENNA</option>
+                    <option value="SARAJEVO">SARAJEVO</option>
+                    <option value="BRUSSELS">BRUSSELS</option>
+                    <option value="SOFIA">SOFIA</option>
+                    <option value="MINSK">MINSK</option>
+                    <option value="BERN">BERN</option>
+                    <option value="PRAGUE">PRAGUE</option>
+                    <option value="BERLIN">BERLIN</option>
+                    <option value="COPENHAGEN">COPENHAGEN</option>
+                    <option value="TALLINN">TALLINN</option>
+                    <option value="MADRID">MADRID</option>
+                    <option value="HELSINKI">HELSINKI</option>
+                    <option value="PARIS">PARIS</option>
+                    <option value="LONDON">LONDON</option>
+                    <option value="ATHENS">ATHENS</option>
+                    <option value="ZAGREB">ZAGREB</option>
+                    <option value="BUDAPEST">BUDAPEST</option>
+                    <option value="DUBLIN">DUBLIN</option>
+                    <option value="REYKJAVIK">REYKJAVIK</option>
+                    <option value="ROME">ROME</option>
+                    <option value="VADUZ">VADUZ</option>
+                    <option value="VILNIUS">VILNIUS</option>
+                    <option value="LUXEMBOURG">LUXEMBOURG</option>
+                    <option value="RIGA">RIGA</option>
+                    <option value="MONACO">MONACO</option>
+                    <option value="CHISINAU">CHISINAU</option>
+                    <option value="PODGORICA">PODGORICA</option>
+                    <option value="SKOPJE">SKOPJE</option>
+                    <option value="VALLETTA">VALLETTA</option>
+                    <option value="AMSTERDAM">AMSTERDAM</option>
+                    <option value="OSLO">OSLO</option>
+                    <option value="WARSAW">WARSAW</option>
+                    <option value="LISBON">LISBON</option>
+                    <option value="BUCHAREST">BUCHAREST</option>
+                    <option value="BELGRADE">BELGRADE</option>
+                    <option value="MOSCOW">MOSCOW</option>
+                    <option value="STOCKHOLM">STOCKHOLM</option>
+                    <option value="LJUBLJANA">LJUBLJANA</option>
+                    <option value="BRATISLAVA">BRATISLAVA</option>
+                    <option value="SAN MARINO">SAN MARINO</option>
+                    <option value="KIEV">KIEV</option>
+                </select>
+                <div class="button-container">
+                    <button type="submit" name="action" value="remove">Eliminar Ciudad</button>
+                    <button type="submit" name="action" value="restore">Restaurar Ciudad</button>
+                </div>
             </form>
         </aside>
     </div>
